# ocd

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  redact.py
.github/workflows/: pages.yml
config/: categories.yaml  merchant_memory.yaml  models.yaml
data/: categorized_meta.yaml  transactions_categorized_previous.csv  transactions_raw.csv
reports/: report_2024-01_to_2024-04.md
src/ocd/: __init__.py  app.py  auth.py  classify.py  cli.py  config.py  extract.py  models.py  paths.py  report.py  review.py  server.py  service.py
src/ocd/samples/: __init__.py  download_samples.py  make_synthetic.py
src/ocd/web/: index.html
